infrastructure/traefik-config/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Traefik"
    gethomepage.dev/description: "Ingress controller"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "traefik.png"
    gethomepage.dev/href: "https://traefik.item.fyi"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=traefik"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.item.fyi`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
